--- a/custom_components/device_pulse/manifest.json
+++ b/custom_components/device_pulse/manifest.json
@@ -4,12 +4,11 @@
   "codeowners": [
     "@studiobts"
   ],
-  "documentation": "https://github.com/studiobts/home-assistant-device-pulse",
-  "issue_tracker": "https://github.com/studiobts/home-assistant-device-pulse/issues",
-  "version": "1.0.0",
-  "iot_class": "local_polling",
   "config_flow": true,
-  "requirements": [
-    "icmplib==3.0"
-  ]
+  "dependencies": ["ping", "recorder"],
+  "documentation": "https://github.com/studiobts/home-assistant-device-pulse",
+  "iot_class": "local_polling",
+  "issue_tracker": "https://github.com/studiobts/home-assistant-device-pulse/issues",
+  "requirements": ["icmplib==3.0"],
+  "version": "1.0.0"
 }
