--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -1,6 +1,6 @@
 name: Feature request
 description: Suggest an idea for this project
-labels: feature_request
+labels: feature-request
 body:
   - type: markdown
     attributes:
