--- a/custom_components/device_pulse/manifest.json
+++ b/custom_components/device_pulse/manifest.json
@@ -5,7 +5,7 @@
     "@studiobts"
   ],
   "config_flow": true,
-  "dependencies": ["ping", "recorder"],
+  "dependencies": ["ping", "recorder", "zeroconf"],
   "documentation": "https://github.com/studiobts/home-assistant-device-pulse",
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/studiobts/home-assistant-device-pulse/issues",
